# django_challenge

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
templates/todo/: todo_update.html
todo/: admin.py  forms.py  models.py  views.py
todo/migrations/: 0001_initial.py  0002_todo_user_alter_todo_created_at_and_more.py
users/: views.py
