[tool.poetry]
name = "django-challenge-02"
version = "0.1.0"
description = ""
authors = ["RandomUsername_Kr <theoriginaldongik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
