[project]
name = "DjangoChallenge"
version = "0.1.0"
dependencies = [
    "django",
    "django-extensions",
    "ipython",
]
package = false


[tool.poetry]
name = "DjangoChallenge"
package = false
version = "0.1.0"
description = ""
authors = ["RandomUsername_Kr <theoriginaldongik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
